--- a/index.html
+++ b/index.html
@@ -1,30 +1,157 @@
-<!DOCTYPE html>
+  <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
   <title>Smashing Magazine - For Professional Web Designers and Developers</title>
   <meta name="description" content="The Odin Project Exercise">
   <meta name="author" content="Vishal Patel">
-  <link href="https://fonts.googleapis.com/css?family=Telex" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <div id="wrapper">
-    
-    <div class="footer">
-      <p>Shop the <a href="http://web.archive.org/web/20140301004610/http://store.apple.com/us">Apple Online Store</a> (1-800-MY-APPLE), visit an <a href="http://web.archive.org/web/20140301004610/http://www.apple.com/retail/">Apple Retail Store</a>, or find a <a href="http://web.archive.org/web/20140301004610/http://www.apple.com/buy/">reseller</a>.</p>
-      <a href="http://web.archive.org/web/20140301004610/http://www.apple.com/sitemap/" id="footer-left-margin">Site Map</a>
-      <a href="http://web.archive.org/web/20140301004610/http://www.apple.com/hotnews/">Hot News</a>
-      <a href="http://web.archive.org/web/20140301004610/http://www.apple.com/rss/">RSS Feeds</a>
-      <a href="http://web.archive.org/web/20140301004610/http://www.apple.com/pr/">Media Info</a>
-      <a href="http://web.archive.org/web/20140301004610/http://www.apple.com/environment/">Environment</a>
-      <a href="http://web.archive.org/web/20140301004610/http://www.apple.com/jobs/">Job Opportunities</a>
-      <a href="http://web.archive.org/web/20140301004610/http://www.apple.com/contact/">Contact Us</a>
-      <a href="http://web.archive.org/web/20140301004610/http://www.apple.com/choose-your-country/"><img src="images/usa.png" alt="Choose Your Country"></img></a><br>
-      <p>Copyright © 2014 Apple Inc. All rights reserved.</p>
-      <a href="http://web.archive.org/web/20140301004610/http://www.apple.com/legal/">Terms of Use</a>
-      <a href="http://web.archive.org/web/20140301004610/http://www.apple.com/legal/privacy/">Privacy Policy</a>
+    <div class="nav">
+      <div class="logo">
+        <div class="logo-block">
+        </div>
+      </div>
+      <div class="tabs">
+      </div>
+      <div class="tabs">
+      </div>
+      <div class="tabs">
+      </div>
+      <div class="tabs">
+      </div>
+      <div class="tabs">
+      </div>
+    </div>
+    <div class="body">
+      <div class="left-nav">
+        <div class="nav-item">
+          <div class="black-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+        </div>
+        <div class="nav-item">
+          <div class="black-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+        </div>
+        <div class="nav-item">
+          <div class="black-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+        </div>
+        <div class="nav-item">
+          <div class="black-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+        </div>
+        <div class="nav-item">
+          <div class="black-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+        </div>
+        <div class="nav-item">
+          <div class="black-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+          <div class="grey-item"></div>
+        </div>
+      </div>
+      <div class="article">
+        <div class="article-content">
+          <div class="heading"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+        </div>
+        <div class="article-content">
+          <div class="heading"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+        </div>
+        <div class="article-content">
+          <div class="heading"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+        </div>
+        <div class="article-content">
+          <div class="heading"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+        </div>
+        <div class="article-content">
+          <div class="heading"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+        </div>
+        <div class="article-content">
+          <div class="heading"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+          <div class="text"></div>
+        </div>
+      </div>
+    </div>
+    <div class="right-sidebar">
+      <div class="searchbar">
+        <div class="sw"></div>
+        <div class="sb"></div>
+      </div>
+      <div class="sidebar-content">
+        <div class="searchbar" style="padding-top:30%">
+          <div class="sw"></div>
+          <div class="sb"></div>
+        </div>
+      </div>
+      <div class="sidebar-content">
+        <div class="centered-grey-block"></div>
+      </div>
+      <div class="sidebar-content">
+        <div class="centered-grey-block"></div>
+      </div>
+      <div class="sidebar-content">
+        <div class="centered-grey-block"></div>
+      </div>
+      <div class="sidebar-content">
+        <div class="centered-grey-block"></div>
+      </div>
+      <div class="sidebar-content">
+        <div class="centered-grey-block"></div>
+      </div>
+      <div class="sidebar-content">
+        <div class="centered-grey-block"></div>
+      </div>
     </div>
   </div>
 </body>
